@@ -58,17 +58,18 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 	char buf[MAX_ERR_BUF];
 	struct stat st;
 
-	if (!(ctxt = malloc(sizeof(struct lookup_context)))) {
+	*context = NULL;
+
+	ctxt = malloc(sizeof(struct lookup_context));
+	if (!ctxt) {
 		char *estr = strerror_r(errno, buf, MAX_ERR_BUF);
 		crit(LOGOPT_ANY, MODPREFIX "malloc: %s", estr);
-		*context = NULL;
 		return 1;
 	}
 
 	if (argc < 1) {
 		crit(LOGOPT_ANY, MODPREFIX "No map name");
 		free(ctxt);
-		*context = NULL;
 		return 1;
 	}
 
@@ -79,7 +80,6 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 		      MODPREFIX "file map %s is not an absolute pathname",
 		      ctxt->mapname);
 		free(ctxt);
-		*context = NULL;
 		return 1;
 	}
 
@@ -88,7 +88,6 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 		     MODPREFIX "file map %s missing or not readable",
 		     ctxt->mapname);
 		free(ctxt);
-		*context = NULL;
 		return 1;
 	}
 
@@ -96,7 +95,6 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 		crit(LOGOPT_ANY, MODPREFIX "file map %s, could not stat",
 		     ctxt->mapname);
 		free(ctxt);
-		*context = NULL;
 		return 1;
 	}
 		
@@ -109,7 +107,6 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 	if (!ctxt->parse) {
 		crit(LOGOPT_ANY, MODPREFIX "failed to open parse context");
 		free(ctxt);
-		*context = NULL;
 		return 1;
 	}
 	*context = ctxt;
