@@ -43,9 +43,11 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 	struct lookup_context *ctxt = NULL;
 	char buf[MAX_ERR_BUF];
 
+	*context = NULL;
+
 	/* If we can't build a context, bail. */
-	if ((*context = ctxt = (struct lookup_context *)
-	     malloc(sizeof(struct lookup_context))) == NULL) {
+	ctxt = malloc(sizeof(struct lookup_context));
+	if (!ctxt) {
 		char *estr = strerror_r(errno, buf, MAX_ERR_BUF);
 		crit(LOGOPT_ANY, MODPREFIX "malloc: %s", estr);
 		return 1;
@@ -58,6 +60,7 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 	if (hesiod_init(&(ctxt->hesiod_context)) != 0) {
 		char *estr = strerror_r(errno, buf, MAX_ERR_BUF);
 		crit(LOGOPT_ANY, MODPREFIX "hesiod_init(): %s", estr);
+		free(ctxt);
 		return 1;
 	}
 
@@ -66,7 +69,15 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 		mapfmt = MAPFMT_DEFAULT;
 
 	/* Open the parser, if we can. */
-	return !(ctxt->parser = open_parse(mapfmt, MODPREFIX, argc - 1, argv + 1));
+	ctxt->parser = open_parse(mapfmt, MODPREFIX, argc - 1, argv + 1);
+	if (!ctxt->parser) {
+		crit(LOGOPT_ANY, MODPREFIX "failed to open parse context");
+		free(ctxt);
+		return 1;
+	}
+	*context = ctxt;
+
+	return 0;
 }
 
 int lookup_read_master(struct master *master, time_t age, void *context)
