@@ -47,7 +47,10 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 	struct lookup_context *ctxt;
 	char buf[MAX_ERR_BUF];
 
-	if (!(*context = ctxt = malloc(sizeof(struct lookup_context)))) {
+	*context = NULL;
+
+	ctxt = malloc(sizeof(struct lookup_context));
+	if (!ctxt) {
 		char *estr = strerror_r(errno, buf, MAX_ERR_BUF);
 		crit(LOGOPT_ANY, MODPREFIX "malloc: %s", estr);
 		return 1;
@@ -56,7 +59,6 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 	if (argc < 1) {
 		crit(LOGOPT_ANY, MODPREFIX "No map name");
 		free(ctxt);
-		*context = NULL;
 		return 1;
 	}
 	ctxt->mapname = argv[0];
@@ -66,7 +68,6 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 		     MODPREFIX "program map %s is not an absolute pathname",
 		     ctxt->mapname);
 		free(ctxt);
-		*context = NULL;
 		return 1;
 	}
 
@@ -75,14 +76,21 @@ int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **co
 		     MODPREFIX "program map %s missing or not executable",
 		     ctxt->mapname);
 		free(ctxt);
-		*context = NULL;
 		return 1;
 	}
 
 	if (!mapfmt)
 		mapfmt = MAPFMT_DEFAULT;
 
-	return !(ctxt->parse = open_parse(mapfmt, MODPREFIX, argc - 1, argv + 1));
+	ctxt->parse = open_parse(mapfmt, MODPREFIX, argc - 1, argv + 1);
+	if (!ctxt->parse) {
+		crit(LOGOPT_ANY, MODPREFIX "failed to open parse context");
+		free(ctxt);
+		return 1;
+	}
+	*context = ctxt;
+
+	return 0;
 }
 
 int lookup_read_master(struct master *master, time_t age, void *context)
